# dr-metrix

./: Cargo.toml  LICENSE.md  README.md  compose.yml
dr-metrix-axum/: Cargo.toml  README.md
dr-metrix-axum/src/: handler.rs  http_metrics.rs  layer.rs  lib.rs  state.rs
dr-metrix-core/: Cargo.toml  README.md
dr-metrix-core/src/: collector.rs  error.rs  lib.rs
dr-metrix-mongo/: Cargo.toml  README.md
dr-metrix-mongo/src/: lib.rs  metrics.rs
dr-metrix-postgres/: Cargo.toml  README.md
dr-metrix-postgres/src/: lib.rs  metrics.rs
dr-metrix-postgres/src/pool/: deadpool.rs  mod.rs  r2d2.rs  seaorm.rs
dr-metrix-redis/: Cargo.toml  README.md
dr-metrix-redis/src/: info_parser.rs  lib.rs  metrics.rs
examples/: Cargo.toml
examples/src/: main.rs
