[workspace]
members = [
    "dr-metrix-core",
    "dr-metrix-postgres",
    "dr-metrix-redis",
    "dr-metrix-mongo",
    "dr-metrix-axum",
    "examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gabe <gabe@neiam.org>"]

[workspace.dependencies]
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
http = "1"
pin-project-lite = "0.2"
diesel          = { version = "2", features = ["postgres"] }
deadpool-diesel = { version = "0.5", features = ["postgres"] }
sqlx            = { version = "0.8", features = ["postgres", "runtime-tokio"] }
sea-orm         = { version = "1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
fred            = { version = "10" }
mongodb         = { version = "3" }
bson            = "2"
anyhow          = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
