[package]
name = "dr-metrix-axum"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dr-metrix-core = { path = "../dr-metrix-core" }
prometheus   = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
http         = { workspace = true }
