[package]
name         = "dr-metrix-axum"
version.workspace  = true
edition.workspace  = true
license.workspace  = true
repository.workspace = true
description  = "Axum middleware and handler for Prometheus metrics via dr-metrix"
keywords     = ["prometheus", "axum", "metrics", "middleware"]

[dependencies]
dr-metrix-core = { path = "../dr-metrix-core", version = "0.1.0" }
prometheus   = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
http         = { workspace = true }
