[package]
name = "dr-metrix-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prometheus   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
