[package]
name = "dr-metrix-mongo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dr-metrix-core = { path = "../dr-metrix-core" }
prometheus   = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
mongodb      = { workspace = true }
bson         = { workspace = true }
serde_json   = { workspace = true }
