[package]
name         = "dr-metrix-redis"
version.workspace  = true
edition.workspace  = true
license.workspace  = true
repository.workspace = true
description  = "Redis Prometheus metrics collector for dr-metrix (fred v10)"
keywords     = ["prometheus", "redis", "metrics", "fred"]

[dependencies]
dr-metrix-core = { path = "../dr-metrix-core", version = "0.1.0" }
prometheus   = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
fred         = { workspace = true }
